generating spark.init and test sleep

--- a/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
@@ -915,6 +915,7 @@ spark.port(port);
 spark.get(\"/page/:id\", (req, res) -> executor.submit(() -> this.getPage(req, res)).get());
 spark.get(\"/\", (req, res) -> executor.submit(() -> this.getHello(req, res)).get());
 spark.post(\"/apply\", (req, res) -> executor.submit(() -> this.postApply(req, res)).get());
+spark.init();
 executor.submit(this::subscribeAndLoadOldEvents);
 Logger.getGlobal().info(\"PartyApp service is up and running on port \" + port);
 "
