--- a/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
@@ -480,6 +480,7 @@ spark.port(port);
 spark.get(\"/page/:id\", (req, res) -> executor.submit(() -> this.getPage(req, res)).get());
 spark.get(\"/\", (req, res) -> executor.submit(() -> this.getHello(req, res)).get());
 spark.post(\"/apply\", (req, res) -> executor.submit(() -> this.postApply(req, res)).get());
+spark.init();
 executor.submit(this::subscribeAndLoadOldEvents);
 Logger.getGlobal().info(\"IonicKassel42 service is up and running on port \" + port);
 "
