--- a/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Shop/classModel.yaml
@@ -755,6 +755,7 @@ spark.port(port);
 spark.get(\"/page/:id\", (req, res) -> executor.submit(() -> this.getPage(req, res)).get());
 spark.get(\"/\", (req, res) -> executor.submit(() -> this.getHello(req, res)).get());
 spark.post(\"/apply\", (req, res) -> executor.submit(() -> this.postApply(req, res)).get());
+spark.init();
 executor.submit(this::subscribeAndLoadOldEvents);
 Logger.getGlobal().info(\"Shop service is up and running on port \" + port);
 "
