--- a/test/src/test/java/uks/debuggen/interconnect/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/interconnect/classModel.yaml
@@ -82,6 +82,7 @@
       spark = Service.ignite();
       spark.port(port);
       spark.post(\"/apply\", (req, res) -> executor.submit(() -> this.postApply(req, res)).get());
+      spark.init();
       executor.submit(() -> System.err.println(\"test executor works\"));
       executor.submit(this::subscribeAndLoadOldEvents);
       executor.submit(() -> System.err.println(\"test executor has done subscribeAndLoadOldEvents\"));"
@@ -194,6 +195,12 @@ public void Interconnect()"
   methodBody: 	"// start the event broker
 eventBroker = new EventBroker();
 eventBroker.start();
+
+try {
+   Thread.sleep(2000);
+} catch (InterruptedException e1) {
+   e1.printStackTrace();
+}
 
 this.start();
 waitForEvent(\"\" + port);
