--- a/src/main/resources/org/fulib/workflows/templates/EventBroker.template
+++ b/src/main/resources/org/fulib/workflows/templates/EventBroker.template
@@ -43,6 +43,11 @@ public class EventBroker
       spark.post("/publish", (req, res) -> executor.submit(() -> this.postPublish(req, res)).get());
       spark.init();
       Logger.getGlobal().info("Event Broker is up and running on port " + port);
+      try {
+         Thread.sleep(2000);
+      } catch (InterruptedException e1) {
+         e1.printStackTrace();
+      }
    }
 
    private String getHello(Request req, Response res)
