--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -13,7 +13,7 @@ jobs:
                - 11
             os:
                - ubuntu
-#               - windows
+               - windows
       steps:
          -  name: Checkout
             uses: actions/checkout@v2
