--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 plugins {
-	id 'java'
-	id 'application'
-	id 'org.fulib.fulibGradle' version '0.2.0'
-	id 'maven-publish'
-	id 'com.jfrog.bintray' version '1.8.4'
-	id 'de.clashsoft.simple-publish' version '0.3.0'
-	id 'com.github.johnrengelman.shadow' version '4.0.4'
+   id 'java-library'
+   id 'org.fulib.fulibGradle' version '0.5.0'
+   id 'antlr'
+   id 'maven-publish'
+   id 'de.clashsoft.gentreesrc-gradle' version '0.5.0'
+   // https://plugins.gradle.org/plugin/com.bmuschko.nexus
+   id 'com.bmuschko.nexus' version '2.3.1'
+   // https://plugins.gradle.org/plugin/io.codearte.nexus-staging
+   id 'io.codearte.nexus-staging' version '0.22.0'
 }
+
 
 group = 'org.fulib'
 version = 'git describe --tags'.execute().text[1..-2] // strip v and \n
@@ -17,36 +20,43 @@ modifyPom {
    project {
       name = project.name
       description = project.description
-      url = 'https://github.com/fujaba/fulibWorkflows'
-      inceptionYear = '2021'
+      url = 'https://github.com/fujaba/fulibWorkflows/'
+      inceptionYear = '2019'
 
       scm {
-         url = 'https://github.com/fujaba/fulibWorkflows'
+         url = 'https://github.com/fujaba/fulibWorkflows/'
       }
 
       licenses {
          license {
-            name = 'MIT License'
-            url = 'http://www.opensource.org/licenses/mit-license.php'
+            name = 'BSD 3-Clause License'
+            url = 'https://opensource.org/licenses/BSD-3-Clause'
          }
       }
 
       developers {
          developer {
             id = 'azuendorf'
-            name = 'Albert Zuendorf'
+            name = 'Albert Zündorf'
+            email = 'zuendorf@uni-kassel.de'
          }
-		developer {
-            id = 'Kuenssi'
-            name = 'Maximilian Freiherr von Künßberg'
-         }
-         developer {
+
+        developer {
             id = 'Clashsoft'
             name = 'Adrian Kunz'
+            email = 'clashsoft@hotmail.com'
          }
+
+		developer {
+    	    id = 'Kuenssi'
+        	name = 'Maximilian Freiherr von Künßberg'
+    	}
+
       }
    }
 }
+
+
 
 sourceCompatibility = 1.11
 
