feat(docs): prep for examples

--- a/test/src/gen/resources/workflows/interconnect/InterconnectOverview.es.yaml
+++ b/test/src/gen/resources/workflows/interconnect/InterconnectOverview.es.yaml
@@ -9,7 +9,7 @@
 
 - boundedContext: Uni Kassel Tesla charger
 
-- broker: Kassel charging
+- brokerTopic: Kassel charging
 
 - boundedContext: city electrics Kassel Inc
 
