--- a/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/CovidVaccination.es.yaml
+++ b/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/CovidVaccination.es.yaml
@@ -4,7 +4,7 @@
 - event: covid vaccination requested 14:10
 
 # import covid risks
-# - broker: stiko covid data
+# - brokerTopic: stiko covid data
 
 # publish covid related diagnosis
 
