--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "java",
             "name": "GenShopWorkflow",
             "request": "launch",
             "mainClass": "org.junit.runner.JUnitCore",
             "args": "org.fulib.workflows.GenShopWorkflow"
+        },
+        {
+            "type": "java",
+            "name": "GenHelloWorld",
+            "request": "launch",
+            "mainClass": "org.junit.runner.JUnitCore",
+            "args": "org.fulib.workflows.pm.GenHelloWorld"
         },
         {
             "type": "java",
