--- a/test/src/test/java/uks/debuggen/microshop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/microshop/classModel.yaml
@@ -218,11 +218,15 @@ open(\"http://localhost:42001/page/12_01\");
 
 // page 12:02
 open(\"http://localhost:42001/page/12_02\");
+
+// page 12:03
+open(\"http://localhost:42001/page/12_03\");
 $(\"#barcode\").setValue(\"b001\");
-$(\"#type\").setValue(\"red shoes\");
+$(\"#product\").setValue(\"red shoes\");
+$(\"#amount\").setValue(\"10\");
 $(\"#location\").setValue(\"shelf 42\");
 $(\"#ok\").click();
-waitForEvent(\"12:02:01\");
+waitForEvent(\"12:03:01\");
 
 // check Warehouse
 open(\"http://localhost:42001\");
@@ -231,15 +235,16 @@ for (DataEvent dataEvent : warehouse.getBuilder().getEventStore().values()) {
 }
 modelMap = warehouse.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_02_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_03_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42001\");
-// check data note 12:02:02
-BoxBuilt e12_02_02 = (BoxBuilt) waitForEvent(\"12:02:02\");
-assertThat(e12_02_02.getBarcode()).isEqualTo(\"b001\");
-assertThat(e12_02_02.getContent()).isEqualTo(\"red shoes\");
-assertThat(e12_02_02.getLocation()).isEqualTo(\"shelf 42\");
+// check data note 12:03:02
+PaletteBuilt e12_03_02 = (PaletteBuilt) waitForEvent(\"12:03:02\");
+assertThat(e12_03_02.getBarcode()).isEqualTo(\"b001\");
+assertThat(e12_03_02.getProduct()).isEqualTo(\"red shoes\");
+assertThat(e12_03_02.getAmount()).isEqualTo(\"10\");
+assertThat(e12_03_02.getLocation()).isEqualTo(\"shelf 42\");
 
 // check MicroShop
 open(\"http://localhost:42002\");
@@ -248,25 +253,26 @@ for (DataEvent dataEvent : microShop.getBuilder().getEventStore().values()) {
 }
 modelMap = microShop.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_02_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_03_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42002\");
-// check data note 12:03:01
-ProductBuilt e12_03_01 = (ProductBuilt) waitForEvent(\"12:03:01\");
-assertThat(e12_03_01.getName()).isEqualTo(\"red shoes\");
-assertThat(e12_03_01.getState()).isEqualTo(\"in stock\");
-
-// page 12:04
-open(\"http://localhost:42001/page/12_04\");
+// check data note 12:04:01
+ProductBuilt e12_04_01 = (ProductBuilt) waitForEvent(\"12:04:01\");
+assertThat(e12_04_01.getName()).isEqualTo(\"red shoes\");
+assertThat(e12_04_01.getState()).isEqualTo(\"in stock\");
 
 // page 12:05
 open(\"http://localhost:42001/page/12_05\");
+
+// page 12:06
+open(\"http://localhost:42001/page/12_06\");
 $(\"#barcode\").setValue(\"b002\");
-$(\"#type\").setValue(\"red shoes\");
+$(\"#product\").setValue(\"red shoes\");
+$(\"#amount\").setValue(\"10\");
 $(\"#location\").setValue(\"shelf 23\");
 $(\"#ok\").click();
-waitForEvent(\"12:05:01\");
+waitForEvent(\"12:06:01\");
 
 // check Warehouse
 open(\"http://localhost:42001\");
@@ -275,15 +281,15 @@ for (DataEvent dataEvent : warehouse.getBuilder().getEventStore().values()) {
 }
 modelMap = warehouse.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_05_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_06_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42001\");
-// check data note 12:05:02
-BoxBuilt e12_05_02 = (BoxBuilt) waitForEvent(\"12:05:02\");
-assertThat(e12_05_02.getBarcode()).isEqualTo(\"b002\");
-assertThat(e12_05_02.getContent()).isEqualTo(\"red shoes\");
-assertThat(e12_05_02.getLocation()).isEqualTo(\"shelf 23\");
+// check data note 12:06:02
+PaletteBuilt e12_06_02 = (PaletteBuilt) waitForEvent(\"12:06:02\");
+assertThat(e12_06_02.getBarcode()).isEqualTo(\"b002\");
+assertThat(e12_06_02.getContent()).isEqualTo(\"red shoes\");
+assertThat(e12_06_02.getLocation()).isEqualTo(\"shelf 23\");
 
 // check MicroShop
 open(\"http://localhost:42002\");
@@ -292,25 +298,26 @@ for (DataEvent dataEvent : microShop.getBuilder().getEventStore().values()) {
 }
 modelMap = microShop.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_05_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_06_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42002\");
-// check data note 12:06:01
-ProductBuilt e12_06_01 = (ProductBuilt) waitForEvent(\"12:06:01\");
-assertThat(e12_06_01.getName()).isEqualTo(\"red shoes\");
-assertThat(e12_06_01.getState()).isEqualTo(\"in stock\");
-
-// page 12:07
-open(\"http://localhost:42001/page/12_07\");
+// check data note 12:07:01
+ProductBuilt e12_07_01 = (ProductBuilt) waitForEvent(\"12:07:01\");
+assertThat(e12_07_01.getName()).isEqualTo(\"red shoes\");
+assertThat(e12_07_01.getState()).isEqualTo(\"in stock\");
 
 // page 12:08
 open(\"http://localhost:42001/page/12_08\");
+
+// page 12:09
+open(\"http://localhost:42001/page/12_09\");
 $(\"#barcode\").setValue(\"b003\");
-$(\"#type\").setValue(\"blue jeans\");
+$(\"#product\").setValue(\"blue jeans\");
+$(\"#amount\").setValue(\"8\");
 $(\"#location\").setValue(\"shelf 1337\");
 $(\"#ok\").click();
-waitForEvent(\"12:08:01\");
+waitForEvent(\"12:09:01\");
 
 // check Warehouse
 open(\"http://localhost:42001\");
@@ -319,15 +326,16 @@ for (DataEvent dataEvent : warehouse.getBuilder().getEventStore().values()) {
 }
 modelMap = warehouse.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_08_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/warehouse12_09_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42001\");
-// check data note 12:08:02
-BoxBuilt e12_08_02 = (BoxBuilt) waitForEvent(\"12:08:02\");
-assertThat(e12_08_02.getBarcode()).isEqualTo(\"b003\");
-assertThat(e12_08_02.getContent()).isEqualTo(\"blue jeans\");
-assertThat(e12_08_02.getLocation()).isEqualTo(\"shelf 1337\");
+// check data note 12:09:02
+PaletteBuilt e12_09_02 = (PaletteBuilt) waitForEvent(\"12:09:02\");
+assertThat(e12_09_02.getBarcode()).isEqualTo(\"b003\");
+assertThat(e12_09_02.getProduct()).isEqualTo(\"blue jeans\");
+assertThat(e12_09_02.getAmount()).isEqualTo(\"8\");
+assertThat(e12_09_02.getLocation()).isEqualTo(\"shelf 1337\");
 
 // check MicroShop
 open(\"http://localhost:42002\");
@@ -336,23 +344,23 @@ for (DataEvent dataEvent : microShop.getBuilder().getEventStore().values()) {
 }
 modelMap = microShop.getBuilder().getModel().getModelMap();
 if (modelMap.values().size() > 0) {
-   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_08_01.svg\", modelMap.values());
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/microShop12_09_01.svg\", modelMap.values());
 }
 
 open(\"http://localhost:42002\");
-// check data note 12:09:01
-ProductBuilt e12_09_01 = (ProductBuilt) waitForEvent(\"12:09:01\");
-assertThat(e12_09_01.getName()).isEqualTo(\"blue jeans\");
-assertThat(e12_09_01.getState()).isEqualTo(\"in stock\");
-
-// page 12:10
-open(\"http://localhost:42001/page/12_10\");
+// check data note 12:10:01
+ProductBuilt e12_10_01 = (ProductBuilt) waitForEvent(\"12:10:01\");
+assertThat(e12_10_01.getName()).isEqualTo(\"blue jeans\");
+assertThat(e12_10_01.getState()).isEqualTo(\"in stock\");
 
 // page 12:11
-open(\"http://localhost:42002/page/12_11\");
+open(\"http://localhost:42001/page/12_11\");
 
 // page 12:12
 open(\"http://localhost:42002/page/12_12\");
+
+// page 12:13
+open(\"http://localhost:42002/page/12_13\");
 $(\"#product\").setValue(\"red shoes\");
 $(\"#price\").setValue(\"$42\");
 $(\"#ok\").click();
